--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
     build: ./backend
     ports:
       - "8080:8080"
+    environment:
+      - _JAVA_OPTIONS=-XX:-UseGCOverheadLimit -Xmx16384m
     depends_on:
       - db
     networks:
@@ -28,7 +30,7 @@ services:
     container_name: frontend
     build: ./frontend
     ports:
-      - "8081:8081"
+      - "8081:80"
     depends_on:
       - backend
 volumes:
